--- a/index.html
+++ b/index.html
@@ -107,8 +107,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Add an Assignment here</h6>
-              <p contenteditable="true" class="w3-border w3-padding">Assignment name</p>
-              <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i> Add</button> 
+              <form action="">
+                <p> Assignment name: <input type="text" name="name" placeholder="Title"></p>
+                <p> Due date: <input type="date" name="date"></p>
+                <p> Due date: <input type="time" name="time"></p>
+                <input type="submit" class="w3-button w3-theme" value="Add">
+              </form> 
             </div>
           </div>
         </div>
