Start scripting functionality in app.js

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Add an Assignment here</h6>
-              <form action="">
+              <form id="add-assignment">
                 <p> Assignment name: <input type="text" name="name" placeholder="Title"></p>
                 <p> Due date: <input type="date" name="date"></p>
                 <p> Due date: <input type="time" name="time"></p>
