--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
             <button type="button" class="w3-button w3-theme">Add Class</button>
             <p></p>
           </div>
-          <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> My Assignments</button>
+          <button onclick="myFunction('Demo2')" class="w3-button w3-block w3-theme-l1 w3-left-align initially-hidden"><i class="fa fa-calendar-check-o fa-fw w3-margin-right"></i> My Assignments</button>
           <div id="Demo2" class="w3-hide w3-container">
             <p>Some other text..</p>
             <button type="button" class="w3-button w3-theme">Add Assignment</button>
@@ -102,7 +102,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     </div>
     
     <!-- Middle Column -->
-    <div class="w3-col m7" id="add-assignment-div">
+    <div class="w3-col m7 initially-hidden">
       <div class="w3-row-padding">
         <div class="w3-col m12">
           <div class="w3-card w3-round w3-white">
