Add some test code

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           <div class="w3-card w3-round w3-white">
             <div class="w3-container w3-padding">
               <h6 class="w3-opacity">Assignments:</h6>
-              <li id="assignment-list">
+              <div id="assignment-list">
                 <!-- Here go assignments via jquery -->
-              </li>
+              </div>
             </div>
           </div>
         </div>
