edited css of login.html and started webhosting process

--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
     <script src="scripts/jquery-3.0.0.min.js"></script>
     <script src="scripts/login.js"></script>
     <link rel='stylesheet' href='css/login.css' type='text/css' media='all' />
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
