Changed assignment variable names and corrected "due time"

--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
                   <option value="Exam">
                   <option value="Other">
                 </datalist></p>
-                <p> Assignment Name: <input type="text" name="name" placeholder="Title"></p>
-                <p> Due date: <input type="date" name="date"></p>
-                <p> Due date: <input type="time" name="time"></p>
-                <p> Description: <textarea name="description" rows="3" cols="20"></textarea></p>
+                <p> Assignment Name: <input type="text" name="aName" placeholder="Title"></p>
+                <p> Due date: <input type="date" name="dueDate"></p>
+                <p> Due tate: <input type="time" name="dueTime"></p>
+                <p> Description: <textarea name="aDescription" rows="3" cols="20"></textarea></p>
                 <input type="submit" class="w3-button w3-theme" value="Add">
               </form> 
             </div>
