--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
                 </datalist></p>
                 <p> Assignment Name: <input type="text" name="aName" placeholder="Title"></p>
                 <p> Due date: <input type="date" name="dueDate"></p>
-                <p> Due tate: <input type="time" name="dueTime"></p>
+                <p> Due time: <input type="time" name="dueTime"></p>
                 <p> Description: <textarea name="aDescription" rows="3" cols="20"></textarea></p>
                 <input type="submit" class="w3-button w3-theme" value="Add">
               </form> 
