--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <br>
 
 <!-- Footer -->
-<footer class="w3-container w3-theme-d3 w3-padding-16">
-  <h5>Footer</h5>
+<footer class="w3-container w3-theme-d3 w3-padding-16" align=center>
+  <h5>Created by Saurav Khanna, Micah Parlato and Samuel Roberts</h5>
 </footer>
  
 <script>
