Add functionality for delete Assignment button

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
                 <p> Due date: <input type="date" name="dueDate"></p>
                 <p> Due time: <input type="time" name="dueTime"></p>
                 <p> Description: <textarea name="aDescription" rows="3" cols="20"></textarea></p>
-                <button type="submit" class="w3-button w3-theme" value="Add">Add</button>
+                <button type="submit" class="w3-button w3-theme" value="Add">Submit</button>
               </form> 
             </div>
           </div>
