--- a/login.html
+++ b/login.html
@@ -18,15 +18,15 @@
     <center>
         <br><br><br>
         <div id="login">
-          <a><img class="logotype" src="images/" /></a>
+          <!--<a><img class="logotype" src="images/" /></a>-->
           <fieldset>
             <h2>Welcome Back</h2>
 
-            <input placeholder="username" id="username" type="text" name="Username" value="" size="25" maxlength="25" autocomplete="false"><br>
+            <input placeholder="email" id="username" type="text" name="Username"/><br>
 
             <br>
 
-            <input placeholder="password" id="password" type="password" name="Password" value="" size="25" maxlength="25" autocomplete="off"/><br>
+            <input placeholder="password" id="password" type="password" name="Password" value="" size="25"/><br>
             <p id="loginFeedback"> </p>
             
             <button id="enterL">Login</button>
@@ -42,11 +42,11 @@
           <fieldset>
             <h2>Welcome to OnTyme</h2>
 
-            <input placeholder="username" id="sUsername" type="text" name="Username" value="" size="25" maxlength="25" autocomplete="false"><br>
+            <input placeholder="email" id="sUsername" type="text" name="Username" value="" size="25"><br>
 
             <br>
 
-            <input placeholder="password" id="sPassword" type="password" name="Password" value="" size="25" maxlength="25" autocomplete="off"/><br>
+            <input placeholder="password" id="sPassword" type="password" name="Password" value="" size="25"><br>
             <p id="signupFeedback"> </p>
             
             <button id="enterS">Sign Up</button>
