--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
     </div>
   </div>
   <a href="#" onclick="handleLogOut()" class="w3-bar-item w3-button w3-hide-small w3-right w3-padding-large w3-hover-white" title="My Account"><i class="fa fa-sign-out"></i> Log out</a>
+  <a class="w3-bar-item w3-padding-large welcome w3-hide-small w3-right">Welcome back</a>
  </div>
 </div>
 
@@ -172,7 +173,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <br>
 
 <!-- Footer -->
-<footer class="w3-container w3-theme-d3 w3-padding-16" align=center>
+<footer class="footer w3-container w3-theme-d3 w3-padding-16" align=center>
   <h5>Created by Saurav Khanna, Micah Parlato and Samuel Roberts</h5>
 </footer>
  
