Add username to header

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
           </div>
           <div class="w3-card w3-round w3-white" id="div-that-needs-lower-margin">
             <div class="w3-container w3-padding">
-              <h6 class="w3-opacity">Assignments:</h6>
+              <h6 class="w3-opacity">Assignments</h6>
               <div id="assignment-list">
                 <!-- Here go assignments via jquery -->
               </div>
