--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
       <!-- Accordion -->
       <div class="w3-card w3-round">
         <div class="w3-white">
-          <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-circle-o-notch fa-fw w3-margin-right"></i> My Classes</button>
+          <button onclick="myFunction('Demo1')" class="w3-button w3-block w3-theme-l1 w3-left-align"><i class="fa fa-book fa-fw w3-margin-right"></i> My Classes</button>
           <div id="Demo1" class="w3-show w3-container">
             <div id="actual-class-list"></div>
             <p><input type="text" id="class-name-field" placeholder="Class name"></input>
