added a tentative logo

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
         <div id="login">
           <!--<a><img class="logotype" src="images/" /></a>-->
           <fieldset>
-            <h2>Welcome Back</h2>
+            <h2>Welcome Back to OnTyme</h2>
 
             <input placeholder="email" id="username" type="text" name="Username"/><br>
 
