--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Open Sans", sans-serif}
 <!-- Navbar -->
 <div class="w3-top">
  <div class="w3-bar w3-theme-d2 w3-left-align w3-large">
-  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><i class="fa fa-home w3-margin-right"></i>Logo</a>
+  <a href="#" class="w3-bar-item w3-button w3-padding-large w3-theme-d4"><img class="logotype" src="images/OnTymeLogo.png" width="30px" height="30px" /><i id="logo" class=" w3-margin-right"></i>OnTyme</a>
   <div class="w3-dropdown-hover w3-hide-small">   
     <div class="w3-dropdown-content w3-card-4 w3-bar-block" style="width:300px">
       <a href="#" class="w3-bar-item w3-button">One new friend request</a>
